--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 20px;
   /* border: 1px solid #ccc;*/
   box-shadow: 0 4px 6px 3px rgba(0, 0, 0, 0.329);
-  border-radius: 20%;
+  border-radius: 10%;
   width: 70vw;
   margin: auto;
   padding: 15px;
@@ -50,6 +50,7 @@ body {
 
   align-items: center;
   justify-content: center;
+  gap: 20px;
 }
 
 .card .image-container {
@@ -78,8 +79,9 @@ body {
   position: absolute;
 } */
 .card .image-container figure {
-  height: 80%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
+  border-radius: 20%;
   /* background-color: rgb(209, 118, 118);*/
   background-color: #d6d0d0;
   /* border-radius: 50%; */
@@ -88,21 +90,24 @@ body {
   display: flex;
   justify-content: center;
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card .image-container figure img {
   position: absolute;
-  max-width: 110%;
+  max-width: 100%;
   height: auto;
   bottom: 0;
 }
 
 .card .text {
-  width: 70%;
+  width: 80%;
   text-decoration: none;
 
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .card .text .main-text {
@@ -113,6 +118,7 @@ body {
 
 .card .text .main-text h2 {
   font-size: clamp(0.7rem, 2.5vw, 1.5rem);
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
 
 .card .text .main-text p {
@@ -164,14 +170,14 @@ body {
   .card {
     display: flex;
     flex-direction: column;
-    width: 50vw;
+
     padding: 15px 0;
     gap: 20px;
   }
   .card .container-1 {
     display: flex;
     flex-direction: column;
-    width: 50vw;
+
     padding: 15px 0;
     gap: 20px;
   }
