--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-
+  align-items: center;
   font-weight: 500;
   font-size: large;
   color: #ccc;
