--- a/aboutMe/aboutMe.css
+++ b/aboutMe/aboutMe.css
@@ -101,14 +101,14 @@ main {
 
 .about-me-header {
   width: 100vw;
-  height: 30vw;
+  height: 40vh;
   /* border: 2px solid snow; */
   margin-top: 0;
-  background-image: url(../images/bg.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: rgb(173, 23, 23);
+  /* background-image: url(../images/bg.webp); */
+  /* background-position: center; */
+  /* background-repeat: repeat; */
+  background-size: 20px 20px;
+  color: #ccc;
 
   display: flex;
   justify-content: center;
@@ -116,6 +116,12 @@ main {
   font-size: 2rem;
   font-weight: 900;
   font-style: italic;
+
+  backdrop-filter: blur(10px);
+  background-image: linear-gradient(
+    rgba(26, 24, 153, 0.3),
+    rgba(0, 0, 0, 0.596)
+  );
 }
 
 main .about {
@@ -137,7 +143,11 @@ main .about section {
 main .about section .head {
   width: 100%;
   height: auto;
-  background-image: linear-gradient(rgba(141, 14, 14, 0.3), rgb(218, 38, 38));
+  background-image: linear-gradient(
+    rgba(110, 116, 223, 0.74),
+    rgba(79, 87, 241, 0.562),
+    rgba(0, 0, 0, 0.726)
+  );
   backdrop-filter: blur(10px);
 
   display: flex;
